--- a/style.css
+++ b/style.css
@@ -1,43 +1,87 @@
-:root{
-    --back: #3232f0;
-    --grey: #d1f2e3;
-}
-body{
-    max-width: 800px;
-    margin: 0 auto;
-    background-color: antiquewhite;
-    border: 2px solid #000000;
-}
-.navstyle{
-    background-color: var(--back);
-    color: var(--grey);
+:root {
+    --light-grey: #f5f6f7;
+    --dark-blue: #0a0a23;
+    --fcc-blue: #1b1b32;
+    --light-yellow: #fecc4c;
+    --dark-yellow: #feac32;
+    --light-pink: #ffadad;
+    --dark-red: #850000;
+    --light-green: #acd157;
+  }
+  
+  body {
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    background-color: var(--fcc-blue);
+    color: var(--light-grey);
+  }
+  
+  h1 {
     text-align: center;
-}
-h1{
-    margin: auto;
-    border: 2px  red;
-    text-align: center;
-}
-img{
-    display: block;
-    border-radius: 50%;
-    margin: 0 auto 10px auto;
-    padding: 20px;
-    text-align: center;
-}
-.u-textCenter{
-    text-align: center;
-    color: #000000;
-}
-
-.u-flex{
+  }
+  
+  .container {
+    width: 90%;
+    max-width: 680px;
+  }
+  
+  h1,
+  .container,
+  .output {
+    margin: 20px auto;
+  }
+  
+  label,
+  legend {
+    font-weight: bold;
+  }
+  
+  .input-container {
     display: flex;
     flex-direction: column;
-}
-.but{
-    background-color: #000000;
-    color: red;
-    max-width: 300px;
-    margin: 0 auto;
-    min-height: 50px;
-}
+  }
+  
+  button {
+    cursor: pointer;
+    text-decoration: none;
+    background-color: var(--light-yellow);
+    border: 2px solid var(--dark-yellow);
+  }
+  
+  button,
+  input,
+  select {
+    min-height: 24px;
+    color: var(--dark-blue);
+  }
+  
+  fieldset,
+  label,
+  button,
+  input,
+  select {
+    margin-bottom: 10px;
+  }
+  
+  .output {
+    border: 2px solid var(--light-grey);
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .hide {
+    display: none;
+  }
+  
+  .output span {
+    font-weight: bold;
+    font-size: 1.2em;
+  }
+  
+  .surplus {
+    color: var(--light-pink);
+  }
+  
+  .deficit {
+    color: var(--light-green);
+  }
