--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ h2 {
   margin-bottom: 15px;
 }
 
+h3{
+  margin: 20px 0;
+}
+
 form {
   width: 100%;
   text-align: center;
@@ -61,22 +65,15 @@ fieldset div {
   align-items: center;
 }
 
-.bracket,
-.comma {
-  font-size: 2.3em;
-}
 
-form .comma {
-  margin-left: 2px;
-}
-
-select {
+.values-dropdown {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
   height: 38px;
   width: 50px;
   text-align: center;
+  border: 2px solid var(--blue-50);
 }
 
 button {
@@ -90,7 +87,6 @@ button {
   width: 100%;
 }
 
-select:focus-visible,
 button:focus-visible {
   outline: 3px solid var(--blue-50);
 }
